feat: expose cluster ingress via haproxy

--- a/infrastructure/ansible/roles/haproxy/templates/haproxy.cfg.j2
+++ b/infrastructure/ansible/roles/haproxy/templates/haproxy.cfg.j2
@@ -2,13 +2,15 @@ defaults
     timeout client 10s
     timeout connect 5s
     timeout server 10s
-   
+
+# Frontend for kubernetes API   
 frontend k3s-frontend
     bind *:{{ api_port | default('6443') }}
     mode tcp
     option tcplog
     default_backend k3s-backend
 
+# Backend for kubernetes API 
 backend k3s-backend
     mode tcp
     option tcp-check
@@ -16,4 +18,34 @@ backend k3s-backend
     default-server inter 10s downinter 5s
 {% for node in groups['server'] %}
     server node-{{ loop.index }} {{ hostvars[node]['ansible_host'] | default(node) }}:{{ api_port | default('6443') }} check
+{% endfor %}
+
+# Frontend for HTTPS (TLS passthrough)
+frontend k3s-https
+    bind *:443
+    mode tcp
+    default_backend k3s-nodes-https
+
+# Frontend for HTTP 
+frontend k3s-http
+    bind *:80
+    mode tcp
+    default_backend k3s-nodes-http
+
+# Backend for HTTPS
+backend k3s-nodes-https
+    mode tcp
+    balance roundrobin
+    option tcp-check
+{% for node in groups['server'] %}
+    server node-{{ loop.index }} {{ hostvars[node]['ansible_host'] | default(node) }}:443 check
+{% endfor %}
+
+# Backend for HTTP
+backend k3s-nodes-http
+    mode tcp
+    balance roundrobin
+    option tcp-check
+{% for node in groups['server'] %}
+    server node-{{ loop.index }} {{ hostvars[node]['ansible_host'] | default(node) }}:80 check
 {% endfor %}
