update templates for production

--- a/infrastructure/ansible/roles/argocd/templates/argocd-values.yml.j2
+++ b/infrastructure/ansible/roles/argocd/templates/argocd-values.yml.j2
@@ -17,3 +17,9 @@ server:
     hosts:
       - host: {{ argocd_url }}
     tls: true
+
+    extraTls:
+      - hosts:
+        - argo.g08.local
+        # Based on the ingress controller used secret might be optional
+
